force-app/main/default/objects/BU_Member__c/BU_Member__c.object-meta.xml
<CustomObject>
    <label>BU Member</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>BU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BU Member</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>