force-app/main/default/objects/BU_Member__c/fields/BU_Email__c.field-meta.xml
<CustomField>
    <fullName>BU_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BU Email</label>
    <type>Email</type>
</CustomField>