force-app/main/default/objects/BU_Member__c/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <description>Member Type From ( User , Role , RoleAndSub )</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Member Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>