force-app/main/default/objects/BU_Member__c/fields/Supported_Objects__c.field-meta.xml
<CustomField>
    <fullName>Supported_Objects__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supported Objects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>